--- a/index.html
+++ b/index.html
@@ -29,6 +29,18 @@
         </ul>
       </div> <!-- end category_pages -->
     </div> <!-- end category -->
+    <div class="clearfix"></div>  
+    <div class="category">
+      <h2 id="markdown">Markdown
+      </h2>
+      <div class="category_pages">
+        <ul>  
+          <li class="pagelist item_arrow">
+              <a href="./markdown/ee.html">Getting Started</a>
+          </li>
+        </ul>
+      </div> <!-- end category_pages -->
+    </div> <!-- end category -->
     <div class="clearfix"></div>
 </div>
     </div>
@@ -36,7 +48,7 @@
       <span>
         <p>Copyright © 2018 .
         Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.</p>
-        <p>Site Generated 2018-06-26 14:22:37</p>
+        <p>Site Generated 2018-06-26 15:06:01</p>
       </span>
     </div>
 
