Update output documentation

--- a/么么哒 /ee.html
+++ b/么么哒 /ee.html
@@ -49,7 +49,7 @@
 <script type="text/javascript">
 const gitment = new Gitment({
   title: '么么哒',
-  owner: 'sthsf',
+  owner: '2kkkkk',
   repo: 'wiki',
   oauth: {
     client_id: '086c54c5fd95adfdc372',
@@ -70,7 +70,7 @@ gitment.render('comments')
             <span>
                 Copyright © 2018 zhanghongwei.
                 Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.
-                Fork me in <a href="https://github.com/sthsf/wiki" target="_blank"> github </a>.
+                Fork me in <a href="https://github.com/2kkkkk/wiki" target="_blank"> github </a>.
             </span>
 </div>
 
