--- a/intro/gettingstarted.html
+++ b/intro/gettingstarted.html
@@ -136,7 +136,7 @@ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</p>
 <script type="text/javascript">
 const gitment = new Gitment({
   title: 'Getting Started',
-  owner: '2kkkkk',
+  owner: 'sthsf',
   repo: 'wiki',
   oauth: {
     client_id: '086c54c5fd95adfdc372',
@@ -157,7 +157,7 @@ gitment.render('comments')
             <span>
                 Copyright © 2018 zhanghongwei.
                 Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.
-                Fork me in <a href="https://github.com/2kkkkk/wiki" target="_blank"> github </a>.
+                Fork me in <a href="https://github.com/sthsf/wiki" target="_blank"> github </a>.
             </span>
 </div>
 
