--- a/intro/么么哒 /ee.html
+++ b/intro/么么哒 /ee.html
@@ -35,7 +35,7 @@
 <div id="container">
     
 <div id="header">
-  <div id="post-nav"><a href="/wiki/">Home</a>&nbsp;»&nbsp;<a href="/wiki/#么么哒 ">么么哒 </a>&nbsp;»&nbsp;么么哒</div>
+  <div id="post-nav"><a href="/wiki/">Home</a>&nbsp;»&nbsp;<a href="/wiki/#intro">intro</a>&nbsp;»&nbsp;<a href="/wiki/#intro-么么哒 ">么么哒 </a>&nbsp;»&nbsp;么么哒</div>
 </div>
 <div class="clearfix"></div>
 <div id="title">么么哒</div>
@@ -49,7 +49,7 @@
 <script type="text/javascript">
 const gitment = new Gitment({
   title: '么么哒',
-  owner: '2kkkkk',
+  owner: 'sthsf',
   repo: 'wiki',
   oauth: {
     client_id: '086c54c5fd95adfdc372',
@@ -70,7 +70,7 @@ gitment.render('comments')
             <span>
                 Copyright © 2018 zhanghongwei.
                 Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.
-                Fork me in <a href="https://github.com/2kkkkk/wiki" target="_blank"> github </a>.
+                Fork me in <a href="https://github.com/sthsf/wiki" target="_blank"> github </a>.
             </span>
 </div>
 
