Update output documentation

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <span>
                 Copyright © 2018 zhanghongwei.
                 Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.
-                Fork me in <a href="https://github.com/sthsf/wiki" target="_blank"> github </a>.
+                Fork me in <a href="https://github.com/2kkkkk/wiki" target="_blank"> github </a>.
             </span>
 </div>
 
