--- a/intro/gettingstarted.html
+++ b/intro/gettingstarted.html
@@ -136,11 +136,11 @@ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</p>
 <script type="text/javascript">
 const gitment = new Gitment({
   title: 'Getting Started',
-  owner: 'sthsf',
+  owner: '2kkkkk',
   repo: 'wiki',
   oauth: {
-    client_id: '086c54c5fd95adfdc372',
-    client_secret: '2ad9ebe87b952d2c77fccf99c334881b91eaa73d',
+    client_id: '153a21bcf26bc5a70ca5',
+    client_secret: 'fc50a76b0cc87497e226dc31fd09480481ce9e67',
   },
   // ...
   // For more available options, check out the documentation below
@@ -157,7 +157,7 @@ gitment.render('comments')
             <span>
                 Copyright © 2018 zhanghongwei.
                 Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.
-                Fork me in <a href="https://github.com/sthsf/wiki" target="_blank"> github </a>.
+                Fork me in <a href="https://github.com/2kkkkk/wiki" target="_blank"> github </a>.
             </span>
 </div>
 
