Update output documentation

--- a/intro/么么哒 /ee.html
+++ b/intro/么么哒 /ee.html
@@ -48,6 +48,7 @@
 <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
 <script type="text/javascript">
 const gitment = new Gitment({
+  id: '<%= page.date %>',
   title: '么么哒',
   owner: '2kkkkk',
   repo: 'wiki',
