--- a/intro/gettingstarted.html
+++ b/intro/gettingstarted.html
@@ -135,6 +135,7 @@ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</p>
 <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
 <script type="text/javascript">
 const gitment = new Gitment({
+  id: '<%= page.date %>',
   title: 'Getting Started',
   owner: '2kkkkk',
   repo: 'wiki',
