--- a/Tools/Simiki_GithubPages.html
+++ b/Tools/Simiki_GithubPages.html
@@ -41,32 +41,132 @@
 <div id="title">Simiki + Github Pages 在Mac下搭建部署个人wiki</div>
 <div id="content">
   <div class="toc"><span class="toctitle">Table of Contents</span><ul>
-<li><a href="#simiki-github-pages-macwiki">Simiki + Github Pages 在Mac下搭建部署个人wiki</a><ul>
-<li><a href="#simiki">Simiki介绍</a></li>
+<li><a href="#simiki">Simiki介绍</a><ul>
+<li><a href="#_1">目录结构</a></li>
+</ul>
+</li>
 <li><a href="#macgithub-pages">Mac下部署到Github Pages</a><ul>
-<li><a href="#1">1.准备工作</a></li>
+<li><a href="#_2">准备工作</a></li>
+<li><a href="#_3">本地初始化</a></li>
+<li><a href="#githubio">部署到github.io</a></li>
 </ul>
 </li>
+<li><a href="#_4">网页发布流程</a><ul>
+<li><a href="#htmlgh-pages">提交html文件到gh-pages分支</a></li>
+<li><a href="#mdmastermacgitgithub">提交md文件到master分支（即Mac下使用Git上传本地项目到github）</a></li>
 </ul>
 </li>
+<li><a href="#gitment">Gitment 评论模块</a></li>
 </ul>
 </div>
-<h1 id="simiki-github-pages-macwiki">Simiki + Github Pages 在Mac下搭建部署个人wiki</h1>
-<hr />
 <h2 id="simiki">Simiki介绍</h2>
-<p>Simiki 是一个简单的个人Wiki框架。使用Markdown书写Wiki, 生成静态HTML页面。Wiki源文件按目录分类存放, 方便管理维护。</p>
+<p><a href="http://simiki.org/">Simiki</a> 是一个简单的个人Wiki框架。使用Markdown书写Wiki, 生成静态HTML页面。Wiki源文件按目录分类存放, 方便管理维护。</p>
+<h3 id="_1">目录结构</h3>
 <ul>
-<li>目录结构<br />
-主要介绍一下content和output两个文件夹。使用simiki新建初始化(simiki init)之后会出现四个文件或文件夹，其中content下存储的是源文件(目前只支持markdown)，后面使用simiki g编译的时候会将content下的文件编译成静态文件目录，并存放到output中。</li>
-<li>Simiki quick start<br />
- 具体的安装见<a href="http://simiki.org/quickstart.html">QuickStart</a></li>
+<li><code>_config.yml</code> 站点配置文件. </li>
+<li><code>fabfile.py</code>  扩展脚本, 提供一些方便的额外操作. 需要安装Fabric.</li>
+<li><code>content</code> 存储源文件(目前暂时只支持Markdown)的目录.源文件以子目录名分类存放.<br />
+如content/linux/bash.md表示bash.md这个源文件属于linux分类.<br />
+注意: Simiki 暂时只支持二级目录分类</li>
+<li><code>output</code>  输出的静态文件(html)目录.<br />
+注意: 此目录的生成/更新过程中会存在删除的操作, 请不要将无关且重要的文件放在此目录下</li>
+<li><code>themes</code>  存储所有主题的目录. 一个主题一个子目录, 全部存放在此目录下.<br />
+<code>_config.yml</code>配置当前使用的主题<br />
+使用simiki新建初始化(simiki init)之后会出现四个文件或文件夹，其中content下存储的是源文件(目前只支持markdown)，后面使用simiki g编译的时候会将content下的文件编译成静态文件目录，并存放到output中.</li>
 </ul>
 <hr />
 <h2 id="macgithub-pages">Mac下部署到Github Pages</h2>
-<h3 id="1">1.准备工作</h3>
-<ul>
-<li>新建仓库<a href="https://github.com/2kkkkk/2kkkkk.github.io">2kkkkk.github.io</a></li>
-</ul>
+<h3 id="_2">准备工作</h3>
+<ol>
+<li>注册github账号，创建<code>&lt;username&gt;.github.io</code>项目 例如：<a href="https://github.com/2kkkkk/2kkkkk.github.io">2kkkkk.github.io</a></li>
+<li>创建<code>&lt;username&gt;.wiki</code>项目，并创建<code>gh-pages</code>分支 例如：<a href="https://github.com/2kkkkk/wiki">2kkkkk.wiki</a></li>
+<li>安装simiki <code>pip install simiki</code> </li>
+</ol>
+<h3 id="_3">本地初始化</h3>
+<p>在github中新建完wiki仓库后，clone到本地</p>
+<div class="hlcode"><pre><span></span>git clone https://github.com/yourUsername/wiki.git
+</pre></div>
+
+
+<p>（注意：<code>git clone</code> 命令默认clone <code>master</code>分支的仓库）</p>
+<p>进入wiki文件夹，然后simiki初始化</p>
+<div class="hlcode"><pre><span></span>cd wiki
+simiki init
+simiki q
+</pre></div>
+
+
+<p>此时原来clone下来的wiki空文件夹里面会产生前面目录结构里的那些文件和文件夹。</p>
+<h3 id="githubio">部署到github.io</h3>
+<p>这时候如何将github.io与这个wiki仓库链接起来呢？<br />
+simiki官网给了一个方法：安装Fabric，并且在生成的_config.yml中添加deploy配置项。</p>
+<p><strong>安装Fabirc前需要先安装 <a href="https://github.com/davisp/ghp-import">ghp-import</a>，一个基于 Python 的工具</strong></p>
+<div class="hlcode"><pre><span></span>git clone https://github.com/davisp/ghp-import
+cd ghp-import
+python setup.py install
+</pre></div>
+
+
+<p><strong>安装Fabric：</strong></p>
+<div class="hlcode"><pre><span></span>pip install fabric3
+</pre></div>
+
+
+<p>（注意：由于是python 3 环境，所以用<code>pip install fabric3</code>，如果直接 <code>pip install fabric</code>会出错）</p>
+<p><strong>在 _config.yml 中添加 deploy 配置项代码：</strong></p>
+<div class="hlcode"><pre><span></span>deploy：
+    - type: git
+      remote: origin
+      branch: gh-pages
+</pre></div>
+
+
+<p>该段代码的作用就是将output目录下生成的子文件或者子文件目录，基于git的方式，推送到远程仓库相应的<code>gh-pages</code>分支下。</p>
+<p><strong>确认本地和远程仓库关联</strong> 执行 <code>git remote -v</code> 可以看到远程仓库的 url</p>
+<p><strong>最后执行部署命令<code>fab delpoy</code>即可</strong></p>
+<hr />
+<h2 id="_4">网页发布流程</h2>
+<h3 id="htmlgh-pages">提交html文件到<code>gh-pages</code>分支</h3>
+<p>目前simiki仅支持markdown的格式，因此我们每次的文章都需要用markdown的形式来书写，同时还要注意每个markdown都需要添加类似于头文件的东西，如</p>
+<div class="hlcode"><pre><span></span>---
+title: &quot;Getting Started&quot;
+layout: page
+date: 2099-06-02 00:00
+---
+</pre></div>
+
+
+<p>将写好的md文件放到<code>content</code>文件夹下，执行<code>simiki g</code>,编译成功后执行<code>fab delpoy</code>，即可将<code>output</code>文件夹中的html文件推送到<code>wiki</code>仓库的gh-pages分支，这时候就可以在<code>&lt;yourUserName&gt;.github.io/wiki</code>下看到你发布的内容了。<br />
+<strong>注意：此时只是将<code>output</code>文件夹中的html文件提交到<code>gh-pages</code>分支，还需要将原始md文件提交到<code>master</code>分支作为备份</strong></p>
+<h3 id="mdmastermacgitgithub">提交md文件到<code>master</code>分支（即Mac下使用Git上传本地项目到github）</h3>
+<p>配置 ssh , 输入命令生成ssh key：<code>ssh-keygen -t rsa -C "你登录github的邮箱"</code> </p>
+<p>输入命令，将你的ssh代码复制到剪贴板：<code>pbcopy &lt; ~/.ssh/id_rsa.pub</code> </p>
+<p>回到Github上，点击头像进入设置，再进入<code>SSH and GPG keys</code>，点击 <code>New SSH key</code> </p>
+<p><code>Title</code>：填写你注册的邮箱号，这里就是568581045@qq.com <br />
+<code>key</code> ：填写你的生成的id_rsa.pub， 直接Crl＋v将刚才你已经复制在剪贴板里的 ssh 复制到 key input 里面</p>
+<p>然后点击 <code>Add SSH key</code></p>
+<p>测试是否链接成功，输入命令：<code>ssh -T -v @git@github.com</code></p>
+<p>当successfully之后，在 <code>git config</code> 里设置一下你的 github 登录名以及登陆邮箱，执行以下两个命令：</p>
+<div class="hlcode"><pre><span></span>git config --global user.name &quot;your name&quot;
+
+git config --global user.email &quot;your_email@youremail.com&quot;
+</pre></div>
+
+
+<p>至此，下面就可以开始上传代码了。</p>
+<p>执行命令：<code>git status</code>，就可以看到项目的改动<br />
+（由于output下存的是静态页面，每次添加都会改变，所以我们可以在gitignore中将其忽略提交：输入 <code>touch .gitignore</code>，生成<code>.gitignore</code>文件，在<code>.gitignore</code> 文件里输入你要忽略的文件夹及其文件就可以了）</p>
+<p>然后执行：<code>git add .</code>   (这个点表示更改所有的改动)，</p>
+<p>然后执行命令：<code>git commit -m</code> "update"</p>
+<p>然后执行命令：<br />
+<code>git remote add origin https://github.com/你的用户名/github项目名.git</code></p>
+<p>最后就执行命令：<code>git push -u origin master</code></p>
+<p>则大功告成</p>
+<hr />
+<h2 id="gitment">Gitment 评论模块</h2>
+<p>主题<code>simple</code>存放在<code>theme</code>文件夹下，可以配置主题和页面信息等</p>
+<p><a href="https://imsun.net/posts/gitment-introduction/">Gitment：使用 GitHub Issues 搭建评论系统</a><br />
+<a href="https://www.jianshu.com/p/57afa4844aaa">Gitment评论功能接入踩坑教程</a></p>
 </div>
 <div id="content-footer">created in <span class="create-date date"> 2018-06-27 00:00 </span></div>
 <div id="comments"></div>
