Update output documentation

--- a/Tools/Simiki_GithubPages.html
+++ b/Tools/Simiki_GithubPages.html
@@ -126,7 +126,6 @@ python setup.py install
 <p><strong>最后执行部署命令<code>fab delpoy</code>即可</strong></p>
 <hr />
 <h2 id="_4">网页发布流程</h2>
-<h3 id="htmlgh-pages">提交html文件到<code>gh-pages</code>分支</h3>
 <p>目前simiki仅支持markdown的格式，因此我们每次的文章都需要用markdown的形式来书写，同时还要注意每个markdown都需要添加类似于头文件的东西，如</p>
 <div class="hlcode"><pre><span></span>---
 title: &quot;Getting Started&quot;
@@ -136,6 +135,19 @@ date: 2099-06-02 00:00
 </pre></div>
 
 
+<h3 id="htmlgh-pages">提交html文件到<code>gh-pages</code>分支</h3>
+<p>首先，将<code>master</code>分支克隆到本地</p>
+<div class="hlcode"><pre><span></span>git clone  https://github.com/2kkkkk/wiki.git
+cd wiki
+</pre></div>
+
+
+<p>接着，将<code>gh-pages</code>分支pull到本地（这一步很重要，否则fab deploy会报错！！）</p>
+<div class="hlcode"><pre><span></span>git pull origin gh-pages:gh-pages
+</pre></div>
+
+
+<p>命令<code>git branch</code>可以查看本地分支</p>
 <p>将写好的md文件放到<code>content</code>文件夹下，执行<code>simiki g</code>,编译成功后执行<code>fab delpoy</code>，即可将<code>output</code>文件夹中的html文件推送到<code>wiki</code>仓库的gh-pages分支，这时候就可以在<code>&lt;yourUserName&gt;.github.io/wiki</code>下看到你发布的内容了。<br />
 <strong>注意：此时只是将<code>output</code>文件夹中的html文件提交到<code>gh-pages</code>分支，还需要将原始md文件提交到<code>master</code>分支作为备份</strong></p>
 <h3 id="mdmastermacgitgithub">提交md文件到<code>master</code>分支（即Mac下使用Git上传本地项目到github）</h3>
