Update output documentation

--- a/Tools/mac_install_lightgbm.html
+++ b/Tools/mac_install_lightgbm.html
@@ -45,13 +45,14 @@
 <li><a href="#_2">失败</a></li>
 </ul>
 </div>
+<p><strong>stackverflow真是个好网站！！！！！！！！！</strong></p>
+<p>Mac 系统真的麻烦，在Windows上一个pip install lightgbm就可以了，但在Mac上不行，百度了下，原因是：</p>
 <div class="hlcode"><pre><span></span>LightGBM depends on OpenMP for compiling, which isn&#39;t supported by Apple Clang.
 
 Please install gcc/g++ by using the following commands
 </pre></div>
 
 
-<p><strong>stackverflow真是个好网站！！！！！！！！！</strong></p>
 <h2 id="_1">成功</h2>
 <p>心想用英文搜一下问题，看看老外是怎么解决的，果然找出了stackoverflow上的<a href="https://stackoverflow.com/questions/44937698/lightgbm-oserror-library-not-loaded">解决方案</a>，一看就觉得靠谱，试了之后果然成功了，老外真厉害！</p>
 <div class="hlcode"><pre><span></span><span class="nt">Build</span> <span class="nt">LightGBM</span> <span class="nt">in</span> <span class="nt">Mac</span><span class="o">:</span>
