--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <ul>
           
         <li class="pagelist">
-          <a href="./Machine_Learning/gettingstarted.html">Getting Started</a>
+          <a href="./Machine_Learning/logistic_regression.html">Logistic Regression</a>
         </li>
           
       </ul>
