--- a/Tools/Simiki_GithubPages.html
+++ b/Tools/Simiki_GithubPages.html
@@ -58,6 +58,7 @@
 </ul>
 </li>
 <li><a href="#gitment">Gitment 评论模块</a></li>
+<li><a href="#_5">补充：</a></li>
 </ul>
 </div>
 <h2 id="simiki">Simiki介绍</h2>
@@ -218,6 +219,8 @@ git config --global user.email &quot;your_email@youremail.com&quot;
 <p>主题<code>simple</code>存放在<code>theme</code>文件夹下，可以配置主题和页面信息等</p>
 <p><a href="https://imsun.net/posts/gitment-introduction/">Gitment：使用 GitHub Issues 搭建评论系统</a><br />
 <a href="https://www.jianshu.com/p/57afa4844aaa">Gitment评论功能接入踩坑教程</a></p>
+<h2 id="_5">补充：</h2>
+<p><code>simiki g</code>命令需要用到content和theme两个文件夹的内容来生产output文件夹，因此图片应该放在themes/simple/static/images下</p>
 </div>
 <div id="content-footer">created in <span class="create-date date"> 2018-06-27 00:00 </span></div>
 <div id="comments"></div>
