--- a/Tools/mac_install_lightgbm.html
+++ b/Tools/mac_install_lightgbm.html
@@ -1,44 +1,33 @@
 <!DOCTYPE HTML>
 <html>
-<head>
+  <head>
+    <link rel="Stylesheet" type="text/css" href="/wiki/static/css/colorful.css">
     <link rel="Stylesheet" type="text/css" href="/wiki/static/css/style.css">
-    <link rel="Stylesheet" type="text/css" href="/wiki/static/css/tango.css">
     <link rel="shortcut icon" href="/wiki/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/wiki/favicon.ico" type="image/x-icon">
+    <link rel="alternate" type="application/atom+xml" href="atom.xml" title="Atom feed">
     <title>Mac os 安装 LightGBM - zhanghongwei's personal knowledge wiki</title>
     <meta name="keywords" content="technology, machine learning, data mining"/>
     <meta name="description" content="A wiki website of zhanghongwei when I learned new knowledgy and technics."/>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="viewport" content="width=device-width" />
-
-    <script type="text/x-mathjax-config">
-        MathJax.Hub.Config({
-          tex2jax: {inlineMath: [['$(',')$'], ['\\(','\\)']]}
-        });
-        </script>
-    <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-
-
-    <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-        ga('create', 'UA-78529611-1', 'auto');
-        ga('send', 'pageview');
-
-    </script>
-</head>
-
-<body>
-<div id="container">
     
+  </head>
+
+  <body>
+    <div id="container" class="typo">
+      
 <div id="header">
-  <div id="post-nav"><a href="/wiki/">Home</a>&nbsp;»&nbsp;<a href="/wiki/#Tools">Tools</a>&nbsp;»&nbsp;Mac os 安装 LightGBM</div>
+  <div id="post-nav">
+    <a href="/wiki/">zhanghongwei's personal knowledge wiki</a>
+    &nbsp;&#187;&nbsp;
+    <a href="/wiki/#Tools">Tools</a>
+    &nbsp;&#187;&nbsp;Mac os 安装 LightGBM
+    <span class="updated">Updated&nbsp;
+    2018-06-27 00:00
+    </span>
+  </div>
 </div>
 <div class="clearfix"></div>
-<div id="title">Mac os 安装 LightGBM</div>
 <div id="content">
   <div class="toc"><span class="toctitle">Table of Contents</span><ul>
 <li><a href="#_1">成功</a></li>
@@ -96,52 +85,20 @@ source ~/.bash_profile
 
 
 <p>修改配置后然并卵。。。</p>
+  
 </div>
-<div id="content-footer">created in <span class="create-date date"> 2018-06-27 00:00 </span></div>
-<div id="comments"></div>
-<link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
-<script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
-<script type="text/javascript">
-const gitment = new Gitment({
-  id: '<%= page.date %>',
-  title: 'Mac os 安装 LightGBM',
-  owner: '2kkkkk',
-  repo: 'wiki',
-  oauth: {
-    client_id: '3e94faa97d38ef7da223',
-    client_secret: '20685c8a4da0dfad1c1ae91970b7805e260c5abb',
-  },
-  // ...
-  // For more available options, check out the documentation below
-})
-gitment.render('comments')
-// or
-// gitment.render(document.getElementById('comments'))
-// or
-// document.body.appendChild(gitment.render())
-</script>
-
-</div>
-<div id="footer">
-            <span>
-                Copyright © 2018 zhanghongwei.
-                Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.
-                Fork me in <a href="https://github.com/2kkkkk/wiki" target="_blank"> github </a>.
-            </span>
-</div>
-
-
-<!--百度统计-->
-<script>
-    var _hmt = _hmt || [];
-    (function() {
-        var hm = document.createElement("script");
-        hm.src = "https://hm.baidu.com/hm.js?90e1dcdd1938573c19f9ff6521188e91";
-        var s = document.getElementsByTagName("script")[0];
-        s.parentNode.insertBefore(hm, s);
-    })();
-</script>
-
-
-</body>
+    </div>
+    <div id="footer">
+      <div class="footer-left">
+        <p>
+        Copyright © 2018 zhanghongwei.
+        Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.
+        Theme by <a href="https://git.coding.net/tankywoo/yasimple_x2.git" target="_blank">YASimple_X2</a>.
+        </p>
+      </div> <!-- end footer-left -->
+      <div class="footer-right">
+        <p>Site Generated 2018-06-29 16:53:41</p>
+      </div> <!-- end footer-right -->
+    </div>
+  </body>
 </html>
