--- a/Machine_Learning/logistic_regression.html
+++ b/Machine_Learning/logistic_regression.html
@@ -54,33 +54,17 @@
 <p>一个心脏病预测的问题：根据患者的年龄、血压、体重等信息，来预测患者是否会有心脏病。很明显这是一个二分类问题，其输出y只有{-1,1}两种情况。<br />
 但是，如果我们想知道的不是患者有没有心脏病，而是到底患者有多大的几率是心脏病。这表示，我们更关心的是目标函数的值（分布在0,1之间），表示是正类的概率（正类表示是心脏病）。这跟我们原来讨论的二分类问题不太一样，我们把这个问题称为软性二分类问题（’soft’ binary classification）。这个值越接近1，表示正类的可能性越大；越接近0，表示负类的可能性越大。<br />
 目标函数target function: $$f(x)=P(+1|x)\in [0,1]$$<br />
-对于软性二分类问题，理想的label为概率值，是分布在[0,1]之间的具体值，但是实际数据中label是0或者1，我们可以把实际中的数据看成是理想数据加上了噪声的影响。<br />
-\begin{matrix}<br />
- ideal(noiseless)data \ <br />
- \left { (\mathbf{x}<em 1="1">{1},y</em>=0.9=P(+1|\mathbf{x}<em 2="2">{1}) \right }\<br />
- \left { (\mathbf{x}</em>,y_{2}=0.2=P(+1|\mathbf{x}<em N="N">{2}) \right }  \<br />
- .\<br />
-.\<br />
-.\<br />
-\left { (\mathbf{x}</em>,y_{N}=0.3=P(+1|\mathbf{x}_{N}) \right }<br />
-\end{matrix}</p>
-<p>\begin{matrix}<br />
- actual(noisy)data \ <br />
- \left { (\mathbf{x}<em 1="1">{1},y</em>=1\sim P(y|\mathbf{x}<em 2="2">{1}) \right }\<br />
- \left { (\mathbf{x}</em>,y_{2}=-1\sim P(y|\mathbf{x}<em N="N">{2}) \right }  \<br />
- .\<br />
-.\<br />
-.\<br />
-\left { (\mathbf{x}</em>,y_{N}=+1 \sim P(y|\mathbf{x}_{N}) \right }<br />
-\end{matrix}<br />
-和hard binary classfication相比，使用相同的数据集，但学到不同的target function。</p>
+对于软性二分类问题，理想的label为概率值，是分布在[0,1]之间的具体值，但是实际数据中label是0或者1，我们可以把实际中的数据看成是理想数据加上了噪声的影响。</p>
+<p><img src="/wiki/static/images/logistic_regression/noise_data.png" alt="noise_data"/></p>
+<p>和hard binary classfication相比，使用相同的数据集，但学到不同的target function。</p>
 <p>如果目标函数是$(f(x)=P(+1|x)∈[0,1])$的话，我们如何找到一个好的Hypothesis跟这个目标函数很接近呢？<br />
-首先，根据我们之前的做法，对所有的特征值进行加权处理，计算的结果s，我们称之为 risk score：<br />
-$$for\  \mathbf{x}=(x_{0},x_{1},x_{2},\cdots ,x_{d})\s=\sum_{i=0}^{d}w_{i}x_{i}$$<br />
-但是特征加权和s∈(−∞,+∞)，如何将s值限定在[0,1]之间呢？一个方法是使用sigmoid Function，记为θ(s)<br />
-<img src="/wiki/static/images/logistic_regression/sigmoid.png" alt="sigmoid function"/></p>
-<p>Sigmoid Function函数记为$(\theta (s)=\frac{1}{1+e^{-s}})$，满足$(\theta (-\infty)=0,\theta (0)=0.5,\theta (+\infty)=1)$。这个函数是平滑的、单调的S型函数。则对于逻辑回归问题，hypothesis就是这样的形式：<br />
-$$h(\mathbf{x})=\frac{1}{1+e^{-\mathbf{w}^{T}\mathbf{x}}}$$</p>
+首先，根据我们之前的做法，对所有的特征值进行加权处理，计算的结果s，我们称之为 risk score：</p>
+<p>$$for\  \mathbf{x}=(x_{0},x_{1},x_{2},\cdots ,x_{d})$$</p>
+<p>$$s=\sum_{i=0}^{d}w_{i}x_{i}$$</p>
+<p>但是特征加权和s∈(−∞,+∞)，如何将s值限定在[0,1]之间呢？一个方法是使用sigmoid Function，记为θ(s)</p>
+<p><img src="/wiki/static/images/logistic_regression/sigmoid.png" alt="sigmoid function"/></p>
+<p>Sigmoid Function函数记为$(\theta (s)=\frac{1}{1+e^{-s}})$，满足$(\theta (-\infty)=0,\theta (0)=0.5,\theta (+\infty)=1)$。这个函数是平滑的、单调的S型函数。则对于逻辑回归问题，hypothesis就是这样的形式：</p>
+<p>$$h(\mathbf{x})=\frac{1}{1+e^{-\mathbf{w}^{T}\mathbf{x}}}$$</p>
 <p>那我们的目标就是求出这个预测函数h(x)，使它接近目标函数f(x)</p>
 <h2 id="logistic-regression-error">Logistic Regression Error</h2>
 <p>现在我们将Logistic Regression与之前讲的Linear Classification、Linear Regression做个比较：</p>
@@ -88,9 +72,9 @@ $$h(\mathbf{x})=\frac{1}{1+e^{-\mathbf{w}^{T}\mathbf{x}}}$$</p>
 <p>这三个线性模型都会用到线性scoring function $( s=\mathbf{w}^{T}\mathbf{x})$。linear classification的误差使用的是0/1 error，linear regression的误差使用的是squared error，那么logistic regression的误差该如何定义呢？<br />
 先介绍一下“似然性”的概念。目标函数$(f(x)=P(+1|x))$，如果我们找到了hypothesis很接近target function， 也就是说，在所有的Hypothesis集合中找到一个hypothesis与target function最接近，那么由该hypothesis生成数据集D的似然值应该与由target function 生成数据集D的概率值很接近。</p>
 <p><img src="/wiki/static/images/logistic_regression/max_likelihood.png" alt="max_likelihood"/></p>
-<p>logistic function：$(h(\mathbf{x})=\theta (\mathbf{w}^{T}\mathbf{x}))$ 满足一个性质：1−h(x)=h(−x)， 因此似然函数可以写成：<br />
-$$likelihood(h)=P(\mathbf{x}<em 1="1">{1})h(+\mathbf{x}</em>)\times P(\mathbf{x}<em 2="2">{2})h(-\mathbf{x}</em>)\times \cdots \times P(\mathbf{x}<em N="N">{N})h(+\mathbf{x}</em>)$$<br />
-因为$(P(\mathbf{x}<em n="n">{n}))$<br />
+<p>logistic function：$(h(\mathbf{x})=\theta (\mathbf{w}^{T}\mathbf{x}))$ 满足一个性质：1−h(x)=h(−x)， 因此似然函数可以写成：</p>
+<p>$$likelihood(h)=P(\mathbf{x}<em 1="1">{1})h(+\mathbf{x}</em>)\times P(\mathbf{x}<em 2="2">{2})h(-\mathbf{x}</em>)\times \cdots \times P(\mathbf{x}<em N="N">{N})h(+\mathbf{x}</em>)$$</p>
+<p>因为$(P(\mathbf{x}<em n="n">{n}))$<br />
 对所有的hypothesis来说，都是一样的，所以我们可以忽略它，那么可以得到$(likelihood(h))$正比于所有$(h(y</em>\mathbf{x}<em n="n">{n}))$的乘积，通常情况下target function $(f)$ 生成数据集D的probability很大，因此我们的目标就是让所有$(h(y</em>\mathbf{x}<em h="h">{n}))$的乘积值最大化。<br />
 $$\max</em>\ likelihood(logistic \ h)\propto \prod_{n=1}^{N} h(y_{n}\mathbf{x}<em _mathbf_w="\mathbf{w">{n})$$<br />
 将$( h(\mathbf{x})=\theta (\mathbf{w}^{T}\mathbf{x}))$代入<br />
