--- a/Tools/Simiki_GithubPages.html
+++ b/Tools/Simiki_GithubPages.html
@@ -65,14 +65,14 @@
 <p><a href="http://simiki.org/">Simiki</a> 是一个简单的个人Wiki框架。使用Markdown书写Wiki, 生成静态HTML页面。Wiki源文件按目录分类存放, 方便管理维护。</p>
 <h3 id="_1">目录结构</h3>
 <ul>
-<li><code>_config.yml</code> 站点配置文件. </li>
-<li><code>fabfile.py</code>  扩展脚本, 提供一些方便的额外操作. 需要安装Fabric.</li>
-<li><code>content</code> 存储源文件(目前暂时只支持Markdown)的目录.源文件以子目录名分类存放.<br />
+<li><code>_config.yml</code> 站点配置文件. <br />
+<code>fabfile.py</code>   扩展脚本, 提供一些方便的额外操作. 需要安装Fabric.<br />
+<code>content</code>  存储源文件(目前暂时只支持Markdown)的目录.源文件以子目录名分类存放.<br />
 如content/linux/bash.md表示bash.md这个源文件属于linux分类.<br />
-注意: Simiki 暂时只支持二级目录分类</li>
-<li><code>output</code>  输出的静态文件(html)目录.<br />
-注意: 此目录的生成/更新过程中会存在删除的操作, 请不要将无关且重要的文件放在此目录下</li>
-<li><code>themes</code>  存储所有主题的目录. 一个主题一个子目录, 全部存放在此目录下.<br />
+注意: Simiki 暂时只支持二级目录分类<br />
+<code>output</code>   输出的静态文件(html)目录.<br />
+注意: 此目录的生成/更新过程中会存在删除的操作, 请不要将无关且重要的文件放在此目录下<br />
+<code>themes</code>   存储所有主题的目录. 一个主题一个子目录, 全部存放在此目录下.<br />
 <code>_config.yml</code>配置当前使用的主题<br />
 使用simiki新建初始化(simiki init)之后会出现四个文件或文件夹，其中content下存储的是源文件(目前只支持markdown)，后面使用simiki g编译的时候会将content下的文件编译成静态文件目录，并存放到output中.</li>
 </ul>
@@ -155,7 +155,10 @@ git push -u origin master
 
 <p>即可将md文件提交到<code>master</code>分支。</p>
 <h3 id="htmlgh-pages">提交html文件到<code>gh-pages</code>分支</h3>
+<blockquote>
 <p>将<code>gh-pages</code>分支pull到本地（这一步很重要，否则fab deploy会报错！！）</p>
+</blockquote>
+<p>这一步其实也不需要，之前报错的原因可能是因为网络原因传输错误，导致远程仓库和本地仓库冲突导致，正常情况下不需要，直接执行<code>fab deploy</code> 即可</p>
 <div class="hlcode"><pre><span></span>git pull origin gh-pages:gh-pages
 </pre></div>
 
