--- a/Tools/Simiki_GithubPages.html
+++ b/Tools/Simiki_GithubPages.html
@@ -11,11 +11,11 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width" />
 
-    <script type="text/x-mathjax-config">
-        MathJax.Hub.Config({
-          tex2jax: {inlineMath: [['$(',')$'], ['\\(','\\)']]}
+    <script type="text/x-mathjax-config">         
+        MathJax.Hub.Config({           
+            tex2jax: {inlineMath: [['$','$']]}
         });
-        </script>
+    </script>
     <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 
 
@@ -87,15 +87,15 @@
 </ol>
 <h3 id="_3">本地初始化</h3>
 <p>在github中新建完wiki仓库后，clone到本地</p>
-<div class="hlcode"><pre><span></span>git clone https://github.com/yourUsername/wiki.git
+<div class="hlcode"><pre><span class="n">git</span> <span class="n">clone</span> <span class="n">https</span><span class="o">:</span><span class="c1">//github.com/yourUsername/wiki.git</span>
 </pre></div>
 
 
 <p>（注意：<code>git clone</code> 命令默认clone <code>master</code>分支的仓库）</p>
 <p>进入wiki文件夹，然后simiki初始化</p>
-<div class="hlcode"><pre><span></span>cd wiki
-simiki init
-simiki q
+<div class="hlcode"><pre><span class="n">cd</span> <span class="n">wiki</span>
+<span class="n">simiki</span> <span class="n">init</span>
+<span class="n">simiki</span> <span class="n">q</span>
 </pre></div>
 
 
@@ -104,23 +104,23 @@ simiki q
 <p>这时候如何将github.io与这个wiki仓库链接起来呢？<br />
 simiki官网给了一个方法：安装Fabric，并且在生成的_config.yml中添加deploy配置项。</p>
 <p><strong>安装Fabirc前需要先安装 <a href="https://github.com/davisp/ghp-import">ghp-import</a>，一个基于 Python 的工具</strong></p>
-<div class="hlcode"><pre><span></span>git clone https://github.com/davisp/ghp-import
-cd ghp-import
-python setup.py install
+<div class="hlcode"><pre><span class="n">git</span> <span class="n">clone</span> <span class="n">https</span><span class="o">:</span><span class="c1">//github.com/davisp/ghp-import</span>
+<span class="n">cd</span> <span class="n">ghp</span><span class="o">-</span><span class="n">import</span>
+<span class="n">python</span> <span class="n">setup</span><span class="p">.</span><span class="n">py</span> <span class="n">install</span>
 </pre></div>
 
 
 <p><strong>安装Fabric：</strong></p>
-<div class="hlcode"><pre><span></span>pip install fabric3
+<div class="hlcode"><pre><span class="n">pip</span> <span class="n">install</span> <span class="n">fabric3</span>
 </pre></div>
 
 
 <p>（注意：由于是python 3 环境，所以用<code>pip install fabric3</code>，如果直接 <code>pip install fabric</code>会出错）</p>
 <p><strong>在 _config.yml 中添加 deploy 配置项代码：</strong></p>
-<div class="hlcode"><pre><span></span>deploy：
-    - type: git
-      remote: origin
-      branch: gh-pages
+<div class="hlcode"><pre><span class="n">deploy</span><span class="err">：</span>
+    <span class="o">-</span> <span class="n">type</span><span class="o">:</span> <span class="n">git</span>
+      <span class="nl">remote:</span> <span class="n">origin</span>
+      <span class="nl">branch:</span> <span class="n">gh</span><span class="o">-</span><span class="n">pages</span>
 </pre></div>
 
 
@@ -130,27 +130,27 @@ python setup.py install
 <hr />
 <h2 id="_4">网页发布流程</h2>
 <p>目前simiki仅支持markdown的格式，因此我们每次的文章都需要用markdown的形式来书写，同时还要注意每个markdown都需要添加类似于头文件的东西，如</p>
-<div class="hlcode"><pre><span></span>---
-title: &quot;Getting Started&quot;
-layout: page
-date: 2099-06-02 00:00
----
+<div class="hlcode"><pre><span class="o">---</span>
+<span class="nl">title:</span> <span class="s">&quot;Getting Started&quot;</span>
+<span class="nl">layout:</span> <span class="n">page</span>
+<span class="nl">date:</span> <span class="mi">2099</span><span class="o">-</span><span class="mo">06</span><span class="o">-</span><span class="mo">02</span> <span class="mo">00</span><span class="o">:</span><span class="mo">00</span>
+<span class="o">---</span>
 </pre></div>
 
 
 <h3 id="mdmaster">提交md文件到<code>master</code>分支</h3>
 <p>首先，将<code>master</code>分支克隆到本地</p>
-<div class="hlcode"><pre><span></span>git clone  https://github.com/2kkkkk/wiki.git
-cd wiki
+<div class="hlcode"><pre><span class="n">git</span> <span class="n">clone</span>  <span class="n">https</span><span class="o">:</span><span class="c1">//github.com/2kkkkk/wiki.git</span>
+<span class="n">cd</span> <span class="n">wiki</span>
 </pre></div>
 
 
 <p>命令<code>git branch</code>可以查看本地分支<br />
 命令 <code>git config --global http.postBuffer 1048576000</code> 可以设置缓冲区大小</p>
 <p>将写好的md文件放到<code>content</code>文件夹下，<code>git status</code>查看工作区状态，理论上会出现content新添加的文件，然后执行</p>
-<div class="hlcode"><pre><span></span>git add . 
-git commit -m &quot;update&quot;
-git push -u origin master
+<div class="hlcode"><pre><span class="n">git</span> <span class="n">add</span> <span class="p">.</span> 
+<span class="n">git</span> <span class="n">commit</span> <span class="o">-</span><span class="n">m</span> <span class="s">&quot;update&quot;</span>
+<span class="n">git</span> <span class="n">push</span> <span class="o">-</span><span class="n">u</span> <span class="n">origin</span> <span class="n">master</span>
 </pre></div>
 
 
@@ -160,36 +160,36 @@ git push -u origin master
 <p>将<code>gh-pages</code>分支pull到本地（这一步很重要，否则fab deploy会报错！！）</p>
 </blockquote>
 <p>这一步其实也不需要，之前报错的原因可能是因为网络原因传输错误，导致远程仓库和本地仓库冲突导致，正常情况下不需要，直接执行<code>fab deploy</code> 即可</p>
-<div class="hlcode"><pre><span></span>git pull origin gh-pages:gh-pages
+<div class="hlcode"><pre><span class="n">git</span> <span class="n">pull</span> <span class="n">origin</span> <span class="n">gh</span><span class="o">-</span><span class="n">pages</span><span class="o">:</span><span class="n">gh</span><span class="o">-</span><span class="n">pages</span>
 </pre></div>
 
 
 <p>执行<code>simiki g</code>,编译成功后执行<code>fab delpoy</code>，即可将<code>output</code>文件夹中的html文件推送到<code>wiki</code>仓库的gh-pages分支，这时候就可以在<code>&lt;yourUserName&gt;.github.io/wiki</code>下看到你发布的内容了。<br />
 <strong>注意，这里有坑：有时候，<code>fab deploy</code> 会报如下错误：</strong></p>
-<div class="hlcode"><pre><span></span><span class="n">jackdeMacBook</span><span class="o">-</span><span class="n">Pro</span><span class="p">:</span><span class="n">wiki</span> <span class="n">jack</span><span class="err">$</span> <span class="n">fab</span> <span class="n">deploy</span>
-<span class="p">[</span><span class="n">localhost</span><span class="p">]</span> <span class="n">local</span><span class="p">:</span> <span class="n">which</span> <span class="n">ghp</span><span class="o">-</span><span class="kn">import</span> <span class="o">&gt;</span> <span class="o">/</span><span class="n">dev</span><span class="o">/</span><span class="n">null</span> <span class="mi">2</span><span class="o">&gt;&amp;</span><span class="mi">1</span><span class="p">;</span> <span class="n">echo</span> <span class="err">$?</span>
-<span class="p">[</span><span class="n">localhost</span><span class="p">]</span> <span class="n">local</span><span class="p">:</span> <span class="n">ghp</span><span class="o">-</span><span class="kn">import</span> <span class="o">-</span><span class="n">p</span> <span class="o">-</span><span class="n">m</span> <span class="s2">&quot;Update output documentation&quot;</span> <span class="o">-</span><span class="n">r</span> <span class="n">origin</span> <span class="o">-</span><span class="n">b</span> <span class="n">gh</span><span class="o">-</span><span class="n">pages</span> <span class="n">output</span>
-<span class="n">To</span> <span class="n">https</span><span class="p">:</span><span class="o">//</span><span class="n">github</span><span class="o">.</span><span class="n">com</span><span class="o">/</span><span class="mi">2</span><span class="n">kkkkk</span><span class="o">/</span><span class="n">wiki</span><span class="o">.</span><span class="n">git</span>
- <span class="err">!</span> <span class="p">[</span><span class="n">rejected</span><span class="p">]</span>        <span class="n">gh</span><span class="o">-</span><span class="n">pages</span> <span class="o">-&gt;</span> <span class="n">gh</span><span class="o">-</span><span class="n">pages</span> <span class="p">(</span><span class="n">non</span><span class="o">-</span><span class="n">fast</span><span class="o">-</span><span class="n">forward</span><span class="p">)</span>
-<span class="n">error</span><span class="p">:</span> <span class="n">failed</span> <span class="n">to</span> <span class="n">push</span> <span class="n">some</span> <span class="n">refs</span> <span class="n">to</span> <span class="s1">&#39;https://github.com/2kkkkk/wiki.git&#39;</span>
-<span class="n">hint</span><span class="p">:</span> <span class="n">Updates</span> <span class="n">were</span> <span class="n">rejected</span> <span class="n">because</span> <span class="n">a</span> <span class="n">pushed</span> <span class="n">branch</span> <span class="n">tip</span> <span class="ow">is</span> <span class="n">behind</span> <span class="n">its</span> <span class="n">remote</span>
-<span class="n">hint</span><span class="p">:</span> <span class="n">counterpart</span><span class="o">.</span> <span class="n">Check</span> <span class="n">out</span> <span class="n">this</span> <span class="n">branch</span> <span class="ow">and</span> <span class="n">integrate</span> <span class="n">the</span> <span class="n">remote</span> <span class="n">changes</span>
-<span class="n">hint</span><span class="p">:</span> <span class="p">(</span><span class="n">e</span><span class="o">.</span><span class="n">g</span><span class="o">.</span> <span class="s1">&#39;git pull ...&#39;</span><span class="p">)</span> <span class="n">before</span> <span class="n">pushing</span> <span class="n">again</span><span class="o">.</span>
-<span class="n">hint</span><span class="p">:</span> <span class="n">See</span> <span class="n">the</span> <span class="s1">&#39;Note about fast-forwards&#39;</span> <span class="ow">in</span> <span class="s1">&#39;git push --help&#39;</span> <span class="k">for</span> <span class="n">details</span><span class="o">.</span>
-<span class="n">Traceback</span> <span class="p">(</span><span class="n">most</span> <span class="n">recent</span> <span class="n">call</span> <span class="n">last</span><span class="p">):</span>
-  <span class="n">File</span> <span class="s2">&quot;/Users/jack/anaconda3/bin/ghp-import&quot;</span><span class="p">,</span> <span class="n">line</span> <span class="mi">11</span><span class="p">,</span> <span class="ow">in</span> <span class="o">&lt;</span><span class="n">module</span><span class="o">&gt;</span>
-    <span class="n">load_entry_point</span><span class="p">(</span><span class="s1">&#39;ghp-import==0.5.5&#39;</span><span class="p">,</span> <span class="s1">&#39;console_scripts&#39;</span><span class="p">,</span> <span class="s1">&#39;ghp-import&#39;</span><span class="p">)()</span>
-  <span class="n">File</span> <span class="s2">&quot;/Users/jack/anaconda3/lib/python3.6/site-packages/ghp_import-0.5.5-py3.6.egg/ghp_import.py&quot;</span><span class="p">,</span> <span class="n">line</span> <span class="mi">244</span><span class="p">,</span> <span class="ow">in</span> <span class="n">main</span>
-    <span class="n">git</span><span class="o">.</span><span class="n">check_call</span><span class="p">(</span><span class="s1">&#39;push&#39;</span><span class="p">,</span> <span class="n">opts</span><span class="o">.</span><span class="n">remote</span><span class="p">,</span> <span class="n">opts</span><span class="o">.</span><span class="n">branch</span><span class="p">)</span>
-  <span class="n">File</span> <span class="s2">&quot;/Users/jack/anaconda3/lib/python3.6/site-packages/ghp_import-0.5.5-py3.6.egg/ghp_import.py&quot;</span><span class="p">,</span> <span class="n">line</span> <span class="mi">106</span><span class="p">,</span> <span class="ow">in</span> <span class="n">check_call</span>
-    <span class="n">sp</span><span class="o">.</span><span class="n">check_call</span><span class="p">([</span><span class="s1">&#39;git&#39;</span><span class="p">]</span> <span class="o">+</span> <span class="nb">list</span><span class="p">(</span><span class="n">args</span><span class="p">),</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">)</span>
-  <span class="n">File</span> <span class="s2">&quot;/Users/jack/anaconda3/lib/python3.6/subprocess.py&quot;</span><span class="p">,</span> <span class="n">line</span> <span class="mi">291</span><span class="p">,</span> <span class="ow">in</span> <span class="n">check_call</span>
-    <span class="k">raise</span> <span class="n">CalledProcessError</span><span class="p">(</span><span class="n">retcode</span><span class="p">,</span> <span class="n">cmd</span><span class="p">)</span>
-<span class="n">subprocess</span><span class="o">.</span><span class="n">CalledProcessError</span><span class="p">:</span> <span class="n">Command</span> <span class="s1">&#39;[&#39;</span><span class="n">git</span><span class="s1">&#39;, &#39;</span><span class="n">push</span><span class="s1">&#39;, &#39;</span><span class="n">origin</span><span class="s1">&#39;, &#39;</span><span class="n">gh</span><span class="o">-</span><span class="n">pages</span><span class="s1">&#39;]&#39;</span> <span class="n">returned</span> <span class="n">non</span><span class="o">-</span><span class="n">zero</span> <span class="nb">exit</span> <span class="n">status</span> <span class="mf">1.</span>
+<div class="hlcode"><pre><span class="nx">jackdeMacBook</span><span class="na">-Pro</span><span class="p">:</span><span class="nx">wiki</span> <span class="nx">jack</span><span class="err">$</span> <span class="nx">fab</span> <span class="nx">deploy</span>
+<span class="err">[</span><span class="nx">localhost</span><span class="cp">]</span> local: which ghp-import &gt; /dev/null 2&gt;<span class="ni">&amp;1;</span> echo $?
+<span class="cp">[</span><span class="nx">localhost</span><span class="cp">]</span> local: ghp-import -p -m &quot;Update output documentation&quot; -r origin -b gh-pages output
+To https://github.com/2kkkkk/wiki.git
+ ! <span class="cp">[</span><span class="nx">rejected</span><span class="cp">]</span>        gh-pages -&gt; gh-pages (non-fast-forward)
+error: failed to push some refs to &#39;https://github.com/2kkkkk/wiki.git&#39;
+hint: Updates were rejected because a pushed branch tip is behind its remote
+hint: counterpart. Check out this branch and integrate the remote changes
+hint: (e.g. &#39;git pull ...&#39;) before pushing again.
+hint: See the &#39;Note about fast-forwards&#39; in &#39;git push --help&#39; for details.
+Traceback (most recent call last):
+  File &quot;/Users/jack/anaconda3/bin/ghp-import&quot;, line 11, in <span class="nt">&lt;module&gt;</span>
+    load_entry_point(&#39;ghp-import==0.5.5&#39;, &#39;console_scripts&#39;, &#39;ghp-import&#39;)()
+  File &quot;/Users/jack/anaconda3/lib/python3.6/site-packages/ghp_import-0.5.5-py3.6.egg/ghp_import.py&quot;, line 244, in main
+    git.check_call(&#39;push&#39;, opts.remote, opts.branch)
+  File &quot;/Users/jack/anaconda3/lib/python3.6/site-packages/ghp_import-0.5.5-py3.6.egg/ghp_import.py&quot;, line 106, in check_call
+    sp.check_call(<span class="cp">[</span><span class="s1">&#39;git&#39;</span><span class="cp">]</span> + list(args), **kwargs)
+  File &quot;/Users/jack/anaconda3/lib/python3.6/subprocess.py&quot;, line 291, in check_call
+    raise CalledProcessError(retcode, cmd)
+subprocess.CalledProcessError: Command &#39;<span class="cp">[</span><span class="s1">&#39;git&#39;</span><span class="p">,</span> <span class="s1">&#39;push&#39;</span><span class="p">,</span> <span class="s1">&#39;origin&#39;</span><span class="p">,</span> <span class="s1">&#39;gh-pages&#39;</span><span class="cp">]</span>&#39; returned non-zero exit status 1.
 
-<span class="n">Fatal</span> <span class="n">error</span><span class="p">:</span> <span class="n">local</span><span class="p">()</span> <span class="n">encountered</span> <span class="n">an</span> <span class="n">error</span> <span class="p">(</span><span class="k">return</span> <span class="n">code</span> <span class="mi">1</span><span class="p">)</span> <span class="k">while</span> <span class="n">executing</span> <span class="s1">&#39;ghp-import -p -m &quot;Update output documentation&quot; -r origin -b gh-pages output&#39;</span>
+Fatal error: local() encountered an error (return code 1) while executing &#39;ghp-import -p -m &quot;Update output documentation&quot; -r origin -b gh-pages output&#39;
 
-<span class="n">Aborting</span><span class="o">.</span>
+Aborting.
 </pre></div>
 
 
@@ -203,9 +203,9 @@ git push -u origin master
 <p>然后点击 <code>Add SSH key</code></p>
 <p>测试是否链接成功，输入命令：<code>ssh -T -v @git@github.com</code></p>
 <p>当successfully之后，在 <code>git config</code> 里设置一下你的 github 登录名以及登陆邮箱，执行以下两个命令：</p>
-<div class="hlcode"><pre><span></span>git config --global user.name &quot;your name&quot;
+<div class="hlcode"><pre><span class="n">git</span> <span class="n">config</span> <span class="o">--</span><span class="n">global</span> <span class="n">user</span><span class="p">.</span><span class="n">name</span> <span class="s">&quot;your name&quot;</span>
 
-git config --global user.email &quot;your_email@youremail.com&quot;
+<span class="n">git</span> <span class="n">config</span> <span class="o">--</span><span class="n">global</span> <span class="n">user</span><span class="p">.</span><span class="n">email</span> <span class="s">&quot;your_email@youremail.com&quot;</span>
 </pre></div>
 
 
