--- a/Tools/mac_install_lightgbm.html
+++ b/Tools/mac_install_lightgbm.html
@@ -11,11 +11,11 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width" />
 
-    <script type="text/x-mathjax-config">
-        MathJax.Hub.Config({
-          tex2jax: {inlineMath: [['$(',')$'], ['\\(','\\)']]}
+    <script type="text/x-mathjax-config">         
+        MathJax.Hub.Config({           
+            tex2jax: {inlineMath: [['$','$']]}
         });
-        </script>
+    </script>
     <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 
 
@@ -47,51 +47,51 @@
 </div>
 <p><strong>stackverflow真是个好网站！！！！！！！！！</strong></p>
 <p>Mac 系统真的麻烦，在Windows上一个pip install lightgbm就可以了，但在Mac上不行，百度了下，原因是：</p>
-<div class="hlcode"><pre><span></span>LightGBM depends on OpenMP for compiling, which isn&#39;t supported by Apple Clang.
+<div class="hlcode"><pre><span class="n">LightGBM</span> <span class="n">depends</span> <span class="n">on</span> <span class="n">OpenMP</span> <span class="k">for</span> <span class="n">compiling</span><span class="p">,</span> <span class="n">which</span> <span class="n">isn</span><span class="err">&#39;</span><span class="n">t</span> <span class="n">supported</span> <span class="n">by</span> <span class="n">Apple</span> <span class="n">Clang</span><span class="p">.</span>
 
-Please install gcc/g++ by using the following commands
+<span class="n">Please</span> <span class="n">install</span> <span class="n">gcc</span><span class="o">/</span><span class="n">g</span><span class="o">++</span> <span class="n">by</span> <span class="n">using</span> <span class="n">the</span> <span class="n">following</span> <span class="n">commands</span>
 </pre></div>
 
 
 <h2 id="_1">成功</h2>
 <p>心想用英文搜一下问题，看看老外是怎么解决的，果然找出了stackoverflow上的<a href="https://stackoverflow.com/questions/44937698/lightgbm-oserror-library-not-loaded">解决方案</a>，一看就觉得靠谱，试了之后果然成功了，老外真厉害！</p>
-<div class="hlcode"><pre><span></span><span class="nt">Build</span> <span class="nt">LightGBM</span> <span class="nt">in</span> <span class="nt">Mac</span><span class="o">:</span>
-<span class="nt">brew</span> <span class="nt">install</span> <span class="nt">cmake</span>  
-<span class="nt">brew</span> <span class="nt">install</span> <span class="nt">gcc</span> <span class="nt">--without-multilib</span>  
-<span class="nt">git</span> <span class="nt">clone</span> <span class="nt">--recursive</span> <span class="nt">https</span><span class="o">://</span><span class="nt">github</span><span class="p">.</span><span class="nc">com</span><span class="o">/</span><span class="nt">Microsoft</span><span class="o">/</span><span class="nt">LightGBM</span> <span class="o">;</span> <span class="nt">cd</span> <span class="nt">LightGBM</span>  
-<span class="nt">mkdir</span> <span class="nt">build</span> <span class="o">;</span> <span class="nt">cd</span> <span class="nt">build</span>  
-<span class="nt">cmake</span> <span class="o">..</span>   
-<span class="nt">make</span> <span class="nt">-j</span>  
-<span class="nt">cd</span> <span class="o">../</span><span class="nt">python-packages</span>  
-<span class="nt">sudo</span> <span class="nt">python</span> <span class="nt">setup</span><span class="p">.</span><span class="nc">py</span> <span class="nt">install</span> <span class="nt">--precompile</span>   <span class="p">#</span><span class="nn">注意后面要加</span> <span class="nt">--precompile</span> <span class="err">，</span><span class="nt">不加会报错</span><span class="err">，</span><span class="nt">原因待查</span>
-<span class="nt">As</span> <span class="nt">stated</span> <span class="nt">by</span> <span class="p">@</span><span class="k">ecodan</span><span class="o">,</span> <span class="nt">you</span> <span class="nt">might</span> <span class="nt">need</span> <span class="nt">to</span> <span class="nt">force</span> <span class="nt">Mac</span> <span class="nt">to</span> <span class="nt">use</span> <span class="nt">GCC</span> <span class="nt">and</span> <span class="nt">G</span><span class="o">++</span> <span class="nt">instead</span> <span class="nt">of</span> <span class="nt">the</span> <span class="nt">default</span> <span class="nt">compiler</span><span class="o">.</span> <span class="nt">So</span> <span class="nt">instead</span> <span class="nt">of</span> <span class="nt">building</span> <span class="nt">with</span> <span class="nt">cmake</span> <span class="o">..,</span> <span class="nt">try</span><span class="o">:</span>
+<div class="hlcode"><pre><span class="n">Build</span> <span class="n">LightGBM</span> <span class="n">in</span> <span class="n">Mac</span><span class="o">:</span>
+<span class="n">brew</span> <span class="n">install</span> <span class="n">cmake</span>  
+<span class="n">brew</span> <span class="n">install</span> <span class="n">gcc</span> <span class="o">--</span><span class="n">without</span><span class="o">-</span><span class="n">multilib</span>  
+<span class="n">git</span> <span class="n">clone</span> <span class="o">--</span><span class="n">recursive</span> <span class="n">https</span><span class="o">:</span><span class="c1">//github.com/Microsoft/LightGBM ; cd LightGBM  </span>
+<span class="n">mkdir</span> <span class="n">build</span> <span class="p">;</span> <span class="n">cd</span> <span class="n">build</span>  
+<span class="n">cmake</span> <span class="p">..</span>   
+<span class="n">make</span> <span class="o">-</span><span class="n">j</span>  
+<span class="n">cd</span> <span class="p">..</span><span class="o">/</span><span class="n">python</span><span class="o">-</span><span class="n">packages</span>  
+<span class="n">sudo</span> <span class="n">python</span> <span class="n">setup</span><span class="p">.</span><span class="n">py</span> <span class="n">install</span> <span class="o">--</span><span class="n">precompile</span>   <span class="err">#注意后面要加</span> <span class="o">--</span><span class="n">precompile</span> <span class="err">，不加会报错，原因待查</span>
+<span class="n">As</span> <span class="n">stated</span> <span class="n">by</span> <span class="err">@</span><span class="n">ecodan</span><span class="p">,</span> <span class="n">you</span> <span class="n">might</span> <span class="n">need</span> <span class="n">to</span> <span class="n">force</span> <span class="n">Mac</span> <span class="n">to</span> <span class="n">use</span> <span class="n">GCC</span> <span class="n">and</span> <span class="n">G</span><span class="o">++</span> <span class="n">instead</span> <span class="n">of</span> <span class="n">the</span> <span class="k">default</span> <span class="n">compiler</span><span class="p">.</span> <span class="n">So</span> <span class="n">instead</span> <span class="n">of</span> <span class="n">building</span> <span class="n">with</span> <span class="n">cmake</span> <span class="p">..,</span> <span class="n">try</span><span class="o">:</span>
 
-<span class="nt">cmake</span> <span class="nt">-DCMAKE_C_COMPILER</span><span class="o">=/</span><span class="nt">usr</span><span class="o">/</span><span class="nt">local</span><span class="o">/</span><span class="nt">Cellar</span><span class="o">/</span><span class="nt">gcc</span><span class="o">/</span><span class="nt">6</span><span class="p">.</span><span class="nc">1</span><span class="p">.</span><span class="nc">0</span><span class="o">/</span><span class="nt">bin</span><span class="o">/</span><span class="nt">gcc-6</span> <span class="nt">-DCMAKE_CXX_COMPILER</span><span class="o">=/</span><span class="nt">usr</span><span class="o">/</span><span class="nt">local</span><span class="o">/</span><span class="nt">Cellar</span><span class="o">/</span><span class="nt">gcc</span><span class="o">/</span><span class="nt">6</span><span class="p">.</span><span class="nc">1</span><span class="p">.</span><span class="nc">0</span><span class="o">/</span><span class="nt">bin</span><span class="o">/</span><span class="nt">g</span><span class="o">++</span><span class="nt">-6</span> <span class="o">..</span>       <span class="p">#</span><span class="nn">这句是关键</span><span class="err">，</span><span class="nt">强行指定编译器</span><span class="err">，</span><span class="nt">也就解决了软连接的问题</span>
-<span class="p">#</span><span class="nn">注意要修改gcc版本为自己的版本</span>
+<span class="n">cmake</span> <span class="o">-</span><span class="n">DCMAKE_C_COMPILER</span><span class="o">=/</span><span class="n">usr</span><span class="o">/</span><span class="n">local</span><span class="o">/</span><span class="n">Cellar</span><span class="o">/</span><span class="n">gcc</span><span class="o">/</span><span class="mf">6.1.0</span><span class="o">/</span><span class="n">bin</span><span class="o">/</span><span class="n">gcc</span><span class="o">-</span><span class="mi">6</span> <span class="o">-</span><span class="n">DCMAKE_CXX_COMPILER</span><span class="o">=/</span><span class="n">usr</span><span class="o">/</span><span class="n">local</span><span class="o">/</span><span class="n">Cellar</span><span class="o">/</span><span class="n">gcc</span><span class="o">/</span><span class="mf">6.1.0</span><span class="o">/</span><span class="n">bin</span><span class="o">/</span><span class="n">g</span><span class="o">++-</span><span class="mi">6</span> <span class="p">..</span>       <span class="err">#这句是关键，强行指定编译器，也就解决了软连接的问题</span>
+<span class="cp">#注意要修改gcc版本为自己的版本</span>
 </pre></div>
 
 
 <p>关于make，cmake，可以理解为make需要使用Makefile，而cmake是产生Makefile的工具</p>
 <h2 id="_2">失败</h2>
 <p>百度搜索到的方法基本都是按照github官网来的：</p>
-<div class="hlcode"><pre><span></span><span class="nt">brew</span> <span class="nt">install</span> <span class="nt">cmake</span>
-<span class="nt">brew</span> <span class="nt">install</span> <span class="nt">gcc</span>
-<span class="nt">git</span> <span class="nt">clone</span> <span class="nt">--recursive</span> <span class="nt">https</span><span class="o">://</span><span class="nt">github</span><span class="p">.</span><span class="nc">com</span><span class="o">/</span><span class="nt">Microsoft</span><span class="o">/</span><span class="nt">LightGBM</span> <span class="o">;</span> <span class="nt">cd</span> <span class="nt">LightGBM</span>
-<span class="nt">export</span> <span class="nt">CXX</span><span class="o">=</span><span class="nt">g</span><span class="o">++</span><span class="nt">-7</span> <span class="nt">CC</span><span class="o">=</span><span class="nt">gcc-7</span>  <span class="err">#</span> <span class="nt">replace</span> <span class="nt">7</span> <span class="nt">with</span> <span class="nt">version</span> <span class="nt">of</span> <span class="nt">gcc</span> <span class="nt">installed</span> <span class="nt">on</span> <span class="nt">your</span> <span class="nt">machine</span>
-<span class="nt">mkdir</span> <span class="nt">build</span> <span class="o">;</span> <span class="nt">cd</span> <span class="nt">build</span>
-<span class="nt">cmake</span> <span class="o">..</span>
-<span class="nt">make</span> <span class="nt">-j4</span>
+<div class="hlcode"><pre><span class="n">brew</span> <span class="n">install</span> <span class="n">cmake</span>
+<span class="n">brew</span> <span class="n">install</span> <span class="n">gcc</span>
+<span class="n">git</span> <span class="n">clone</span> <span class="o">--</span><span class="n">recursive</span> <span class="n">https</span><span class="o">:</span><span class="c1">//github.com/Microsoft/LightGBM ; cd LightGBM</span>
+<span class="n">export</span> <span class="n">CXX</span><span class="o">=</span><span class="n">g</span><span class="o">++-</span><span class="mi">7</span> <span class="n">CC</span><span class="o">=</span><span class="n">gcc</span><span class="o">-</span><span class="mi">7</span>  <span class="err">#</span> <span class="n">replace</span> <span class="mi">7</span> <span class="n">with</span> <span class="n">version</span> <span class="n">of</span> <span class="n">gcc</span> <span class="n">installed</span> <span class="n">on</span> <span class="n">your</span> <span class="n">machine</span>
+<span class="n">mkdir</span> <span class="n">build</span> <span class="p">;</span> <span class="n">cd</span> <span class="n">build</span>
+<span class="n">cmake</span> <span class="p">..</span>
+<span class="n">make</span> <span class="o">-</span><span class="n">j4</span>
 </pre></div>
 
 
 <p>提示 permission denied ，一般是因为权限问题，在命令前加sudo即可</p>
 <p>cmake这步出错：<code>Apple clang is not supported</code> ,百度后，原因应该是Mac OS X 系统默认将 GCC软连接到Clang ，然后百度修改软连接的方法：</p>
-<div class="hlcode"><pre><span></span>$sudo vim ~/.bash_profile
-alias gcc=&#39;gcc-4.7&#39;
-alias cc=&#39;gcc-4.7&#39;
-alias g++=&#39;g++-4.7&#39;
-alias c++=&#39;c++-4.7&#39;
-source ~/.bash_profile
+<div class="hlcode"><pre><span class="err">$</span><span class="n">sudo</span> <span class="n">vim</span> <span class="o">~/</span><span class="p">.</span><span class="n">bash_profile</span>
+<span class="n">alias</span> <span class="n">gcc</span><span class="o">=</span><span class="err">&#39;</span><span class="n">gcc</span><span class="o">-</span><span class="mf">4.7</span><span class="err">&#39;</span>
+<span class="n">alias</span> <span class="n">cc</span><span class="o">=</span><span class="err">&#39;</span><span class="n">gcc</span><span class="o">-</span><span class="mf">4.7</span><span class="err">&#39;</span>
+<span class="n">alias</span> <span class="n">g</span><span class="o">++=</span><span class="err">&#39;</span><span class="n">g</span><span class="o">++-</span><span class="mf">4.7</span><span class="err">&#39;</span>
+<span class="n">alias</span> <span class="n">c</span><span class="o">++=</span><span class="err">&#39;</span><span class="n">c</span><span class="o">++-</span><span class="mf">4.7</span><span class="err">&#39;</span>
+<span class="n">source</span> <span class="o">~/</span><span class="p">.</span><span class="n">bash_profile</span>
 </pre></div>
 
 
