--- a/Machine_Learning/Logistic-Regression.html
+++ b/Machine_Learning/Logistic-Regression.html
@@ -5,7 +5,7 @@
     <link rel="Stylesheet" type="text/css" href="/wiki/static/css/tango.css">
     <link rel="shortcut icon" href="/wiki/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/wiki/favicon.ico" type="image/x-icon">
-    <title>lr - zhanghongwei's personal knowledge wiki</title>
+    <title>Logistic Regression - zhanghongwei's personal knowledge wiki</title>
     <meta name="keywords" content="technology, machine learning, data mining"/>
     <meta name="description" content="A wiki website of zhanghongwei when I learned new knowledgy and technics."/>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -35,17 +35,12 @@
 <div id="container">
     
 <div id="header">
-  <div id="post-nav"><a href="/wiki/">Home</a>&nbsp;»&nbsp;<a href="/wiki/#Machine_Learning">Machine_Learning</a>&nbsp;»&nbsp;lr</div>
+  <div id="post-nav"><a href="/wiki/">Home</a>&nbsp;»&nbsp;<a href="/wiki/#Machine_Learning">Machine_Learning</a>&nbsp;»&nbsp;Logistic Regression</div>
 </div>
 <div class="clearfix"></div>
-<div id="title">lr</div>
+<div id="title">Logistic Regression</div>
 <div id="content">
-  <hr />
-<p>title: "Logistic Regression"<br />
-layout: page<br />
-date: 2018-06-29 00:00</p>
-<hr />
-<div class="toc"><span class="toctitle">Table of Contents</span><ul>
+  <div class="toc"><span class="toctitle">Table of Contents</span><ul>
 <li><a href="#logistic-regression-problem">Logistic Regression Problem</a></li>
 <li><a href="#logistic-regression-error">Logistic Regression Error</a></li>
 <li><a href="#gradient-of-logistic-regression-error">Gradient of Logistic Regression Error</a></li>
@@ -344,14 +339,14 @@ $$<br />
 <li><a href="https://www.zhihu.com/question/40181086">怎样理解凸函数与Hessian矩阵半正定</a></li>
 </ol>
 </div>
-<div id="content-footer">created in <span class="create-date date"> 2018-08-13 10:50 </span></div>
+<div id="content-footer">created in <span class="create-date date"> 2018-06-29 00:00 </span></div>
 <div id="comments"></div>
 <link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
 <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
 <script type="text/javascript">
 const gitment = new Gitment({
   id: '<%= page.date %>',
-  title: 'lr',
+  title: 'Logistic Regression',
   owner: '2kkkkk',
   repo: 'wiki',
   oauth: {
