--- a/Machine_Learning/xgboost.html
+++ b/Machine_Learning/xgboost.html
@@ -99,10 +99,10 @@ obj^{(t)}=\sum_{i=1}^{n}[l(y_i,\hat{y_i}^{(t-1)})+g_if_t(x_i)+\frac{1}{2}h_if^2_
 $$<br />
 其中，<br />
 $$<br />
-\begin{align<em>}<br />
+\begin{align}<br />
 g_i=\frac{\partial l(y_i,\hat{y_i}^{(t-1)})}{\partial \hat{y_i}^{(t-1)}}\\<br />
 h_i=\frac{\partial^2 l(y_i,\hat{y_i}^{(t-1)})}{\partial (\hat{y_i}^{(t-1)})^2}\<br />
-\end{align</em>}<br />
+\end{align}<br />
 $$<br />
 分别表示损失函数在当前模型的一阶导和二阶导，每一个样本都可以计算出该样本点的$g_i$和$h_i$，而且样本点之间的计算可以独立进行，互不影响，也就是说，可以并行计算。</p>
 <p>对式（3）进行化简，去掉与$f_t(x)$无关的项，得到<br />
